update the model for the sql switchover
